# cursed-mines

./: CMakeLists.txt  game.cpp  grid.hpp  grid_test.cpp  main.cpp  minefield.cpp  minefield.hpp  minefield_test.cpp  mines.kdev4  square.cpp  square.hpp
core/: CMakeLists.txt  game.cpp  game.hpp  grid.hpp  grid_test.cpp
ui/: CMakeLists.txt  app.cpp  app.hpp  colorscheme.cpp  colorscheme.hpp  gameview.cpp  gameview.hpp  menu.cpp  menu.hpp  statusbar.cpp  statusbar.hpp  widget.cpp  widget.hpp
